fix header title

--- a/src/app/films/films.component.html
+++ b/src/app/films/films.component.html
@@ -94,7 +94,7 @@
       alt="movies"
       src="https://img.icons8.com/cotton/2x/movie-beginning.png"
     />
-    <span>Welcome</span>
+    <span>Gestionnaire des films</span>
       <div class="spacer"></div>
   </div>
   
